<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="@string/settings_content_actual"
        android:title="@string/settings_content_actual" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="@string/settings_content_society"
        android:title="@string/settings_content_society" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="@string/settings_content_culture"
        android:title="@string/settings_content_culture" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="@string/settings_content_event"
        android:title="@string/settings_content_event" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="@string/settings_content_economic"
        android:title="@string/settings_content_economic" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="@string/settings_content_heals"
        android:title="@string/settings_content_heals" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="@string/settings_content_sport"
        android:title="@string/settings_content_sport" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="@string/settings_content_photo"
        android:title="@string/settings_content_photo" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="@string/settings_content_partnership"
        android:title="@string/settings_content_partnership" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="@string/settings_content_official"
        android:title="@string/settings_content_official" />

</PreferenceScreen>
